--- a/Euler/Euler.csproj
+++ b/Euler/Euler.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Problems\Problem70.cs" />
     <Compile Include="Utilities\FunctionExtensions.cs" />
     <Compile Include="Utilities\IntExtensions.cs" />
     <Compile Include="Problems\Problem12.cs" />
