Correct answer to Problem 70 in 32s

--- a/Euler/Euler.csproj
+++ b/Euler/Euler.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Problems\Problem70.cs" />
+    <Compile Include="Utilities\EnumerableExtensions.cs" />
     <Compile Include="Utilities\FunctionExtensions.cs" />
     <Compile Include="Utilities\IntExtensions.cs" />
     <Compile Include="Problems\Problem12.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Sequences.cs" />
+    <Compile Include="Utilities\SequenceStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
