Completed problems 69 to 72 and achieved level 1

--- a/Euler/Euler.csproj
+++ b/Euler/Euler.csproj
@@ -38,7 +38,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Problems\Problem70.cs" />
+    <Compile Include="Algorithms\CoprimeSieve.cs" />
+    <Compile Include="Problems\Problem69To72.cs" />
     <Compile Include="Utilities\EnumerableExtensions.cs" />
     <Compile Include="Utilities\FunctionExtensions.cs" />
     <Compile Include="Utilities\IntExtensions.cs" />
